Added functionality where if they aren't logged in , they are taken to a different page

--- a/client/templates/mainpage/mainpage.html
+++ b/client/templates/mainpage/mainpage.html
@@ -1,3 +1,6 @@
 <template name='mainpage'>
-  <h1>Welcome to Flyp</h1>
+  <h2>Current Users</h2>
+  {{#each directory}}
+    {{> user}}
+  {{/each}}
 </template>
