--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,60 @@
-/* CSS declarations go here */
+/* main.css */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+div.clear {
+  width: 100%;
+  clear: both;
+}
+
+body {
+  background-color: white;
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
+  line-height: 20px;
+}
+body div.center-box {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  top: 25%;
+}
+body div.title {
+  width: 100%;
+  overflow: hidden;
+  color: #006666;
+  font-size: 48px;
+  line-height: 48px;
+  font-weight: bold;
+  text-align: center;
+  height: auto;
+  text-shadow: 1px 1px 2px #d8d8d8;
+}
+body div.email {
+  overflow: auto;
+  margin: 0px auto;
+}
+body input[type="text"].email {
+  font-size: 24px;
+  line-height: 34px;
+  height: 34px;
+  color: #727272;
+  width: 82%;
+  padding-left: 3%;
+  padding-right: 3%;
+  box-shadow: inset 0px 2px 4px #C5CDCE;
+  border: none;
+  border-width: 0;
+  margin: 0;
+  outline: none;
+  margin-left: 16px;
+}
+
+div.slide {
+  padding: 10px;
+  width: 300px;
+  height: 460px;
+  background-color: #e9ebec;
+}
