fixed the time feature

--- a/client/templates/chatrooms/chats.html
+++ b/client/templates/chatrooms/chats.html
@@ -1,4 +1,5 @@
 <template name='chats'>
-  <h3>{{content}}</h3>
-  <p>by {{currentUser}}</p>
+  <h5>{{content}}</h5>
+  <p align ="right">by {{currentUser}}</p>
+  <p align ="right">{{time}}</p>
 </template>
