Added 1 to 1 button, needs a bit more work on it

--- a/client/templates/mainpage/mainpage.html
+++ b/client/templates/mainpage/mainpage.html
@@ -3,4 +3,5 @@
   {{#each directory}}
     {{> user}}
   {{/each}}
+  <button type="randomize" class="btn btn-default"><h1>Random 1 to 1 !</h1></button>
 </template>
