--- a/client/templates/chatrooms/chats.html
+++ b/client/templates/chatrooms/chats.html
@@ -1,5 +1,5 @@
 <template name='chats'>
   <h5>{{content}}</h5>
-  <p align ="right">by {{currentUser}}</p>
+  <p align ="right">by {{author}}</p>
   <p align ="right">{{time}}</p>
 </template>
