--- a/client/templates/chatrooms/chats.html
+++ b/client/templates/chatrooms/chats.html
@@ -1,5 +1,5 @@
 <template name='chats'>
-  <h5>{{content}}</h5>
-  <p align ="right">by {{author}}</p>
-  <p align ="right">{{time}}</p>
+  <h4>{{content}}</h4>
+  <h5 align ="right">by {{author}}</h5>
+  <h5 align ="right">{{time}}</h5>
 </template>
