--- a/client/templates/mainpage/mainpage.html
+++ b/client/templates/mainpage/mainpage.html
@@ -3,5 +3,9 @@
   {{#each directory}}
     {{> user}}
   {{/each}}
+  <h1> Your current chatrooms </h1>
+  {{#each chatrooms_list}}
+    {{> rooms}}
+  {{/each}}
   <button type="randomize" class="btn btn-default"><h1>Random 1 to 1 !</h1></button>
 </template>
