Fixed click errors

--- a/client/templates/mainpage/mainpage.html
+++ b/client/templates/mainpage/mainpage.html
@@ -7,5 +7,5 @@
   {{#each chatrooms_list}}
     {{> rooms}}
   {{/each}}
-  <button type="randomize" class="btn btn-default"><h1>Random 1 to 1 !</h1></button>
+  {{>randomize}}
 </template>
