--- a/client/templates/chatrooms/submit.html
+++ b/client/templates/chatrooms/submit.html
@@ -3,7 +3,7 @@
     <div class="form-group">
       <label class="control-label" for="title">Title</label>
       <div class="controls">
-          <input name="content" id="content" type="text" value="" placeholder="Your message here." class="form-control"/>
+          <input name="content" autocomplete="off" id="content" type="text" value="" placeholder="Your message here." class="form-control"/>
       </div>
     </div>
     <input type="submit" value="Submit" class="btn btn-primary"/>
