buttons for chatrooms

--- a/client/templates/mainpage/rooms.html
+++ b/client/templates/mainpage/rooms.html
@@ -1,3 +1,5 @@
 <template name='rooms'>
-  <h3>Chatroom with {{this._id}}</h3>
+  <!-- <h3>Chatroom with {{this._id}}</h3> -->
+
+  <button onclick="location.href='/chatrooms/{{this._id}}'" class="btn btn-default"><h3>Chatroom with {{this._id}}</h3></button>
 </template>
