--- a/client/templates/mainpage/rooms.html
+++ b/client/templates/mainpage/rooms.html
@@ -1,5 +1,10 @@
 <template name='rooms'>
   <!-- <h3>Chatroom with {{this._id}}</h3> -->
-
-  <button onclick="location.href='/chatrooms/{{this._id}}'" class="btn btn-default"><h3>Chatroom with {{this._id}}</h3></button>
+  <div class=container-fluid>
+    <div class='row'>
+      <div class='md-col-4'>
+        <button onclick="location.href='/chatrooms/{{this._id}}'" class="btn btn-default chatroom-buttons"><h3>Chatroom with {{this._id}}</h3></button>
+      </div>
+    </div>
+  </div>
 </template>
