--- a/client/templates/chatrooms/chats.html
+++ b/client/templates/chatrooms/chats.html
@@ -1,5 +1,11 @@
 <template name='chats'>
-  <h4>{{content}}</h4>
-  <h5 align ="right">by {{author}}</h5>
-  <h5 align ="right">{{time}}</h5>
+
+
+  {{#if yours}}
+    <h4 align='right' class='message'>{{content}}</h4>
+    <h5 align='right' class='date'>{{time}}</h5>
+  {{else}}
+    <h4 align='left' class='message'>{{content}}</h4>
+    <h5 align='left' class='date'>{{time}}</h5>
+  {{/if}}
 </template>
