--- a/client/templates/mainpage/mainpage.html
+++ b/client/templates/mainpage/mainpage.html
@@ -1,9 +1,11 @@
 <template name='mainpage'>
-  <h2>Current Users</h2>
+  <h2>Active Users</h2>
   {{#each directory}}
     {{> user}}
   {{/each}}
-  <h1> Your current chatrooms </h1>
+  <br>
+  <br>
+  <h1> Active Chatrooms </h1>
   {{#each chatrooms_list}}
     {{> rooms}}
   {{/each}}
