--- a/client/templates/mainpage/randomize.html
+++ b/client/templates/mainpage/randomize.html
@@ -1,3 +1,3 @@
 <template name='randomize'>
-  <button type="randomize" class="btn btn-default"><h1>Random 1 to 1 !</h1></button>
+  <center><button type="randomize" class="btn btn-default"><h1>Start New Chat</h1></button></center>
 </template>
