--- a/client/templates/mainpage/rooms.html
+++ b/client/templates/mainpage/rooms.html
@@ -4,7 +4,7 @@
   <div class=container-fluid>
     <div class='row'>
       <div class='md-col-4'>
-        <button onclick="location.href='/chatrooms/{{this._id}}'" class="btn btn-default chatroom-buttons"><h3>Chatroom with {{partner}}</h3></button>
+        <button onclick="location.href='/chatrooms/{{this._id}}'" class="btn btn-default chatroom-buttons"><h3> {{partner}}</h3></button>
       </div>
     </div>
   </div>
