--- a/client/main.css
+++ b/client/main.css
@@ -9,9 +9,15 @@ div.clear {
   clear: both;
 }
 
+.title {
+    font-family: "Arial";
+    font-size: 35px;
+    font-weight: bold;
+}
+
 body {
   background-color: white;
-  font-family: "Lato", sans-serif;
+  font-family: "Helvetica Neue", sans-serif;
   font-size: 20px;
   line-height: 20px;
 }
@@ -61,4 +67,35 @@ div.slide {
 
 .chatroom-buttons{
   width:100%;
+}
+
+.speech-bubble {
+  position: relative;
+	width: auto;
+	height: auto;
+    max-width: 300px;
+
+
+}
+
+.message {
+    padding: 1px 13px;
+    min-width: 50px;
+}
+.lefto{
+    background-color: #E9EBEC;
+    float: left;
+    text-align: left;
+}
+
+.righto{
+    background-color: #D9ED56;
+    float: right;
+    text-align: right;
+}
+
+.round{
+  border-radius: 30px;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
 }
