--- a/client/templates/chatrooms/chats.html
+++ b/client/templates/chatrooms/chats.html
@@ -2,10 +2,18 @@
 
 
   {{#if yours}}
-    <h4 align='right' class='message'>{{content}}</h4>
+    <div class="speech-bubble righto round">
+        <h4 align='right' class='message'>{{content}}</h4>
+    </div>
+    <div class="clear"></div>
     <h6 align='right' class='date'>{{time}}</h6>
+    <div class="clear"></div>
   {{else}}
-    <h4 align='left' class='message'>{{content}}</h4>
+    <div class="speech-bubble lefto round">
+        <h4 align='left' class='message'>{{content}}</h4>
+    </div>
+    <div class="clear"></div>
     <h6 align='left' class='date'>{{time}}</h6>
+    <div class="clear"></div>
   {{/if}}
 </template>
