--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand title" href="{{pathFor 'mainpage'}}" >flyp</a>
+      <a class="navbar-brand title" href="{{pathFor 'mainpage'}}" ><img src="https://i.imgur.com/o8NlZk3.png" width="40" height="40" style="margin-top:-10px;" /></a>
     </div>
     <div class="collapse navbar-collapse" id="navigation">
       <ul class="nav navbar-nav navbar-right">
