--- a/client/templates/mainpage/randomize.html
+++ b/client/templates/mainpage/randomize.html
@@ -1,3 +1,3 @@
 <template name='randomize'>
-  <center><button type="randomize" class="btn btn-default"><h1>Start New Chat</h1></button></center>
+  <center><button type="randomize" class="randomize btn btn-default"><h1>Start New Chat</h1></button></center>
 </template>
