--- a/client/templates/register/login.html
+++ b/client/templates/register/login.html
@@ -1,9 +1,20 @@
-<template name='login'>
-  <form id="login-form" action="action">
-    <div>
-      <input type="email" id="login-email" />
-      <input type="password" id="login-password" />
-      <input type="submit" id="login-button" value="Sign in" />
-   </div>
-  </form>
+<template name="login">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <h4 class="page-header">Login</h4>
+      <form id="signup" class="signup">
+        <div class="form-group">
+          <label for="emailAddress">Email Address</label>
+          <input type="email" id="login-email" name="emailAddress" class="form-control" placeholder="Email Address">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="login-password" name="password" class="form-control" placeholder="Password">
+        </div>
+        <div class="form-group">
+          <input type="submit" id="login-button" class="btn btn-success" value="Log In">
+        </div>
+      </form>
+    </div>
+  </div>
 </template>
