Aligned log-out button.

--- a/client/main.css
+++ b/client/main.css
@@ -11,6 +11,11 @@ div.clear {
   clear: both;
 }
 
+.signout{
+  margin-top: 7px;
+  margin-right:10px;
+}
+
 .title {
     font-family: "Arial";
     font-size: 35px;
@@ -85,7 +90,7 @@ h1 {
 }
 
 h2  {
-    
+
 }
 
 .message {
