--- a/client/templates/includes/signout.html
+++ b/client/templates/includes/signout.html
@@ -1,6 +1,6 @@
 <template name='signout'>
   {{#if currentUser}}
-    <button type="button" class="btn btn-default pull-right" aria-label="Left Align">
+    <button type="button" class="signout btn btn-default pull-right" aria-label="Left Align">
       <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
     </button>
   {{/if}}
