--- a/client/main.css
+++ b/client/main.css
@@ -23,10 +23,14 @@ div.clear {
 }
 
 body {
-  background-color: white;
   font-family: "Helvetica Neue", sans-serif;
   font-size: 20px;
   line-height: 20px;
+  background-image: url('http://i.imgur.com/F5dZjYa.png');
+  background-color:inherit;
+  background-repeat: repeat;
+  background-size: 40px 40px;
+
 }
 body div.center-box {
   width: 100%;
@@ -88,9 +92,8 @@ div.slide {
 h1 {
     text-shadow:0px 1px 1px #626262;
 }
-
-h2  {
-
+.jumbotron {
+    background-color: inherit;
 }
 
 .message {
