An attempt at Google's material design.

--- a/client/main.css
+++ b/client/main.css
@@ -74,6 +74,8 @@ div.slide {
 
 .chatroom-buttons{
   width:100%;
+  height:70px;
+  margin-bottom:-35px;
 }
 
 .speech-bubble {
@@ -88,10 +90,42 @@ div.slide {
 h1 {
     text-shadow:0px 1px 1px #626262;
 }
+
+h5{
+  text-align:center;
+  color:white;
+}
+
+.speech-bubble h5{
+  color:black;
+}
+h6{
+  color:black;
+  font-size:18px;
+}
+
 .jumbotron {
     background-color: inherit;
 }
 
+.randomize{
+  height:90px;
+  width:100%;
+  margin-top:40px;
+  margin-bottom:20px;
+}
+
+.emailcard{
+  height:50px;
+  width:100%;
+}
+.listcards{
+  margin-bottom:7px;
+}
+
+.headernav{
+  width:100%;
+}
 .message {
     padding: 1px 13px;
     min-width: 50px;
