--- a/client/templates/mainpage/user.html
+++ b/client/templates/mainpage/user.html
@@ -1,3 +1,7 @@
 <template name='user'>
-  <h3>{{email}}</h3>
+  <div class='container-fluid'>
+    <div class='listcards card'>
+      <a href="#" class='collection-item'>{{email}}</a>
+    </div>
+  </div>
 </template>
