--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,6 +1,6 @@
 
 <template name="header">
-  <nav class="navbar navbar-default" role="navigation">
+  <nav class="headernav navbar navbar-default" role="navigation">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
         <span class="sr-only">Toggle navigation</span>
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand title" href="{{pathFor 'mainpage'}}" ><img src="https://i.imgur.com/o8NlZk3.png" width="40" height="40" style="margin-top:-10px;" /></a>
+      <a class="navbar-brand title" href="{{pathFor 'mainpage'}}" ><img src="https://i.imgur.com/o8NlZk3.png" width="50" height="50" style="margin-top:-16px;" /></a>
     </div>
 
     <div class="collapse navbar-collapse" id="navigation">
