--- a/client/templates/mainpage/rooms.html
+++ b/client/templates/mainpage/rooms.html
@@ -1,10 +1,8 @@
 <template name='rooms'>
   <!-- <h3>Chatroom with {{this._id}}</h3> -->
   <div class=container-fluid>
-    <div class='row'>
-      <div class='md-col-4'>
-        <button onclick="location.href='/chatrooms/{{this._id}}'" class="btn btn-default chatroom-buttons"><h3> {{partner}}</h3></button>
-      </div>
+    <div class='listcards card'>
+      <a href='/chatrooms/{{this._id}}' class="collection-item">{{partner}}</a>
     </div>
   </div>
 
