--- a/client/templates/register/signup.html
+++ b/client/templates/register/signup.html
@@ -5,7 +5,7 @@
       <form id="signup" class="signup">
         <div class="form-group">
           <label for="name">Name</label>
-          <input type="name" name="name" class="form-control" placeholder="First and Last Name">
+          <input name="name" class="form-control" placeholder="First and Last Name">
         </div>
         <div class="form-group">
           <label for="emailAddress">Email Address</label>
