Finishing touches on material design along with other design changes and small tweaks

--- a/client/templates/chatrooms/submit.html
+++ b/client/templates/chatrooms/submit.html
@@ -1,5 +1,5 @@
 <template name="submit">
-  <form class="main form page">
+  <form class="main form page submitmessage">
     <div class="form-group">
       <div class="controls">
           <input name="content" autocomplete="off" id="content" type="text" value="" placeholder="Your message here." class="form-control"/>
