--- a/client/main.css
+++ b/client/main.css
@@ -6,6 +6,48 @@
   font-family: 'Raleway', sans-serif;
 }
 
+input, textarea{
+    color: #E5E500 !important;
+}
+
+.cards{
+  color:#E5E5E5;
+}
+
+html, body {
+    margin: 0;
+    height: 100%;
+    width:100%;
+}
+
+h1.flyp{
+  color:#E5E500;
+  font-size:120px;
+  font-family: 'Wire One', sans-serif;
+}
+
+.mainpage{
+  background-color:#008080;
+  width:100%;
+  min-height:100%;
+}
+
+.submitmessage{
+  padding-bottom:20px;
+}
+
+
+input::-webkit-input-placeholder {
+color: white !important;
+}
+
+
+
+.labelsignup{
+  color:white;
+}
+
+
 div.clear {
   width: 100%;
   clear: both;
@@ -89,11 +131,23 @@ div.slide {
 
 h1 {
     text-shadow:0px 1px 1px #626262;
+    color:#E5E500;
+}
+h2{
+  color:#E5E500;
+}
+
+h3{
+  color:#E5E500;
+}
+
+h4{
+  color:#E5E500;
 }
 
 h5{
   text-align:center;
-  color:white;
+  color:#E5E500;
 }
 
 .speech-bubble h5{
