--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -1,5 +1,5 @@
 <template name="layout">
-  <div class="container">
+  <div class="mainpage container">
     {{> header}}
     <div id="main">
       {{> yield}}
