--- a/client/templates/register/frontpage.html
+++ b/client/templates/register/frontpage.html
@@ -1,10 +1,9 @@
 <template name='frontpage'>
   <div class='container-fluid'>
     <div class='title jumbotron'>
-      <h1>flyp</h1>
+      <h1 class="flyp">flyp</h1>
       <h3>New? <a href='/register'>Sign up here</a></h3>
       <p><a href='/login'>Existing users</a></p>
-
     </div>
 
   </div>
