--- a/client/templates/register/signup.html
+++ b/client/templates/register/signup.html
@@ -4,15 +4,15 @@
       <h4 class="page-header">Sign Up</h4>
       <form id="signup" class="signup">
         <div class="form-group">
-          <label for="name">Name</label>
+          <label class='labelsignup' for="name">Name</label>
           <input name="name" class="form-control" placeholder="First and Last Name">
         </div>
         <div class="form-group">
-          <label for="emailAddress">Email Address</label>
+          <label class='labelsignup' for="emailAddress">Email Address</label>
           <input type="email" name="emailAddress" class="form-control" placeholder="Email Address">
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
+          <label class='labelsignup' for="password">Password</label>
           <input type="password" name="password" class="form-control" placeholder="Password">
         </div>
         <div class="form-group">
