--- a/client/templates/mainpage/user.html
+++ b/client/templates/mainpage/user.html
@@ -1,7 +1,7 @@
 <template name='user'>
   <div class='container-fluid'>
     <div class='listcards card'>
-      <a href="#" class='collection-item'>{{email}}</a>
+      <a href="#" class='collection-item grey lighten-2'>{{email}}</a>
     </div>
   </div>
 </template>
