--- a/client/templates/register/signup.html
+++ b/client/templates/register/signup.html
@@ -1,24 +1,26 @@
 <template name="signup">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <h4 class="page-header">Sign Up</h4>
-      <form id="signup" class="signup">
-        <div class="form-group">
-          <label class='labelsignup' for="name">Name</label>
-          <input name="name" class="form-control" placeholder="First and Last Name">
-        </div>
-        <div class="form-group">
-          <label class='labelsignup' for="emailAddress">Email Address</label>
-          <input type="email" name="emailAddress" class="form-control" placeholder="Email Address">
-        </div>
-        <div class="form-group">
-          <label class='labelsignup' for="password">Password</label>
-          <input type="password" name="password" class="form-control" placeholder="Password">
-        </div>
-        <div class="form-group">
-          <input type="submit" class="btn btn-success" value="Sign Up">
-        </div>
-      </form>
+  <div class='container-fluid'>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <h4 class="page-header">Sign Up</h4>
+        <form id="signup" class="signup">
+          <div class="form-group">
+            <label class='labelsignup' for="name">Name</label>
+            <input name="name" class="form-control" placeholder="First and Last Name">
+          </div>
+          <div class="form-group">
+            <label class='labelsignup' for="emailAddress">Email Address</label>
+            <input type="email" name="emailAddress" class="form-control" placeholder="Email Address">
+          </div>
+          <div class="form-group">
+            <label class='labelsignup' for="password">Password</label>
+            <input type="password" name="password" class="form-control" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <input type="submit" class="btn btn-success" value="Sign Up">
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </template>
