--- a/client/templates/mainpage/rooms.html
+++ b/client/templates/mainpage/rooms.html
@@ -2,7 +2,7 @@
   <!-- <h3>Chatroom with {{this._id}}</h3> -->
   <div class=container-fluid>
     <div class='listcards card'>
-      <a href='/chatrooms/{{this._id}}' class="collection-item">{{partner}}</a>
+      <a href='/chatrooms/{{this._id}}' class='collection-item grey lighten-2'>{{partner}}</a>
     </div>
   </div>
 
