--- a/client/main.css
+++ b/client/main.css
@@ -62,7 +62,7 @@ div.clear {
 }
 
 body {
-    background-color: white;
+    background-color: #006C6C;
   font-family: "Helvetica Neue", sans-serif;
   font-size: 20px;
   line-height: 20px;
