--- a/client/templates/mainpage/rooms.html
+++ b/client/templates/mainpage/rooms.html
@@ -1,9 +1,5 @@
 <template name='rooms'>
   <!-- <h3>Chatroom with {{this._id}}</h3> -->
-  <div class=container-fluid>
-    <div class='listcards card'>
-      <a href='/chatrooms/{{this._id}}' class='collection-item grey lighten-2'>{{partner}}</a>
-    </div>
-  </div>
+  <a href='/chatrooms/{{this._id}}' class='collection-item'>{{partner}}</a>
 
 </template>
