Added alert system everytime user receives a new message. Also added a small icon next to chatrooms to show that there is a new message. So far it seems to be working but needs a bit more testing.

--- a/client/templates/mainpage/rooms.html
+++ b/client/templates/mainpage/rooms.html
@@ -1,5 +1,5 @@
 <template name='rooms'>
   <!-- <h3>Chatroom with {{this._id}}</h3> -->
-  <a href='/chatrooms/{{this._id}}' class='collection-item'>{{partner}}</a>
+  <a href='/chatrooms/{{this._id}}' class='collection-item'>{{partner}}<span class='new badge'>{{alert}}</span></a>
 
 </template>
