--- a/client/templates/chatrooms/chatrooms.html
+++ b/client/templates/chatrooms/chatrooms.html
@@ -1,16 +1,18 @@
 <template name='chatrooms'>
-  {{#if flypped}}
-    <div>
-    {{#transition in="flipInY" out="flipOutY"}}
-      <h1 align="center">{{roomname}}</h1>
-    {{/transition}}
-    </div>
-  {{else}}
-    <h1 align="center">Anonymous</h1>
-    <h6 align="center">(flips after five exchanges)</h6>
-  {{/if}}
-  {{#each chatlist}}
-    {{> chats}}
-  {{/each}}
-  {{> submit}}
+  <div class='chatroom'>
+    {{#if flypped}}
+      <div>
+      {{#transition in="flipInY" out="flipOutY"}}
+        <h1 align="center">{{roomname}}</h1>
+      {{/transition}}
+      </div>
+    {{else}}
+      <h1 align="center">Anonymous</h1>
+      <h6 align="center">(flips after five exchanges)</h6>
+    {{/if}}
+    {{#each chatlist}}
+      {{> chats}}
+    {{/each}}
+    {{> submit}}
+  </div>
 </template>
