--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -1,8 +1,8 @@
 <template name="layout">
   {{> sAlert}}
-  <div class="mainpage container-fluid">
+  <div class="mainpage">
     {{> header}}
-    <div id="main">
+    <div id="main" class='container-fluid'>
         {{> yield}}
     </div>
   </div>
