--- a/client/templates/includes/signout.html
+++ b/client/templates/includes/signout.html
@@ -1,7 +1,5 @@
 <template name='signout'>
   {{#if currentUser}}
-    <button type="button" class="signout btn btn-default pull-right">
-      <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-    </button>
+    <li class='sidenav-button'><a href="#">Signout</a></li>
   {{/if}}
 </template>
