--- a/client/templates/register/login.html
+++ b/client/templates/register/login.html
@@ -14,6 +14,7 @@
           </div>
           <div class="form-group">
             <input type="submit" id="login-button" class="btn btn-success" value="Log In">
+            <input type="back" class="back-button btn btn-danger" value="back">
           </div>
         </form>
       </div>
