--- a/client/templates/register/signup.html
+++ b/client/templates/register/signup.html
@@ -18,6 +18,7 @@
           </div>
           <div class="form-group">
             <input type="submit" class="btn btn-success" value="Sign Up">
+            <input type="back" class="back-button btn btn-danger" value="back">
           </div>
         </form>
       </div>
