--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,28 +1,19 @@
-
-<template name="header">
-  <nav class="headernav navbar navbar-default" role="navigation">
-    <a class="navbar-brand title" href="{{pathFor 'mainpage'}}" ><img src="https://i.imgur.com/o8NlZk3.png" width="50" height="50" style="margin-top:-16px;" /></a>
-    {{> signout align="right"}}
-  </nav>
-</template>
-
-<!--
-<template name="header">
-  <nav class="headernav navbar navbar-default" role="navigation">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand title" href="{{pathFor 'mainpage'}}" ><img src="https://i.imgur.com/o8NlZk3.png" width="50" height="50" style="margin-top:-16px;" /></a>
+<template name='header'>
+  <nav class= "navbar navbar-fixed-top blue-grey darken-2 mainnav">
+    <div class='header-container'>
+      <p class='header-title'> flyp </p>
     </div>
-
-    <div class="collapse navbar-collapse" id="navigation">
-      <ul class="nav navbar-nav navbar-right">
-        {{> signout align="right"}}
+    <div class="hide-on-med-and-down">
+      <ul class="right">
+        <li><a href="{{pathFor 'mainpage'}}">Home</a></li>
+        {{> signout}}
       </ul>
     </div>
+    <ul id="slide-out" class="side-nav">
+      <h2 style='text-align:center;'>flyp</h2>
+      <li class='sidenav-button'><a href="{{pathFor 'mainpage'}}">Home</a></li>
+      {{> signout}}
+    </ul>
+    <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
   </nav>
-</template> -->
+</template>
