--- a/client/templates/chatrooms/submit.html
+++ b/client/templates/chatrooms/submit.html
@@ -5,6 +5,6 @@
           <input name="content" autocomplete="off" id="content" type="text" value="" placeholder="Your message here." class="form-control"/>
       </div>
     </div>
-    <input type="submit" value="Submit" class="btn btn-primary"/>
+    <input type="submit" value="Submit" class="btn btn-primary submit-button"/>
   </form>
 </template>
