--- a/client/templates/chatrooms/submit.html
+++ b/client/templates/chatrooms/submit.html
@@ -2,7 +2,7 @@
   <form class="main form page submitmessage">
     <div class="form-group">
       <div class="controls">
-          <input name="content" autocomplete="off" id="content" type="text" value="" placeholder="Your message here." class="form-control"/>
+        <input name="content" autocomplete="off" id="content" type="text" value="" placeholder="Your message here." class="submit-input form-control"/>
       </div>
     </div>
     <input type="submit" value="Submit" class="btn btn-primary submit-button"/>
