--- a/client/templates/register/frontpage.html
+++ b/client/templates/register/frontpage.html
@@ -2,6 +2,7 @@
   <div class='container-fluid'>
     <div class='title jumbotron'>
       <h1 class="flyp">flyp</h1>
+      <p class='status'>(Currently in Alpha: Last updated on May 5th, 2:20 am)</p>
       <h3>New? <a href='/register'>Sign up here</a></h3>
       <p><a href='/login'>Existing users</a></p>
     </div>
